# SnakeFaceRecog

./: CMakeLists.txt  DetectarRosto.cpp  DetectarRosto.h  Frutas.cpp  Frutas.h  Pontuacao.cpp  Pontuacao.h  README.md  Timer.cpp  Timer.h  facedetect_extra.cpp  facedetect_simple.cpp
